fix(search): no autocomplete results on mobile

--- a/src/packages/CSS/Controls/SearchEngine/DSFRsearchEngineStyle.css
+++ b/src/packages/CSS/Controls/SearchEngine/DSFRsearchEngineStyle.css
@@ -18,6 +18,7 @@
 .gpf-panel__items.GPautoCompleteProposal {
   height: 45px;
   box-sizing: border-box;
+  margin-bottom: 0;
 }
 
 .GPlabelTitle {
